# ai-podcast

./: .gitignore  .vercelignore  README.md  REMEMBER_TO_BUILD_MAIN.py  gen.py  main.py  pyproject.toml  running_time.py  vercel.json
api/: alembic.ini  db.py  gen.py  main.py  models.py  pyproject.toml  requirements.txt  speech.py  utils.py
api/migrations/: env.py
api/migrations/versions/: 0d4034e40544_initial_setup.py  192a4e7dcafb_convert_duration_to_float.py  2cd374733460_setup_cascades_4.py  32a396471ba6_track_current_position.py  385a987b718b_setup_cascades_3.py  50ed2c793a38_add_podcast_generation_task.py  61eef3d0b6a8_setup_cascades.py  6291b757feff_complete_basic_live_generation.py  6858090487dc_convert_start_time_and_end_time_to_.py  6befde9ade9f_add_progress_message.py  6f1b242edd9b_add_userplayhistory.py  893eec63d1a7_setup_cascades_2.py  94ffa5036ae5_implement_subscriptions.py  9a8d6faa23ec_add_podcast_id_to_conversation.py  a3459514aba5_add_generation_data_to_the_.py  ac94e670aabd_implement_basic_live_generation_2.py  b4a06f71afe1_add_created_at_and_updated_at_to_main_.py  b91cc87f087a_implement_basic_live_generation.py  c56ab9869c9a_add_gender_and_country_to_persona.py  ce86322b1c93_setup_cascades_5.py  da5b74c8abd5_implement_basic_subscription.py  e25a9f873903_add_recommendation_system_like_dislike_.py  e52b74b955ea_add_is_generating_and_is_public_to_.py  f364a86e5ebd_make_profile_id_and_audio_file_nullable.py  f9b6deaa4260_add_username_to_the_user_profile.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/@components/: ActionModal.tsx  AvatarIcon.tsx  Button.tsx  Conversation.tsx  Input.tsx  Markdown.tsx  MediaPlayer.tsx  MenuButton.tsx  NavBar.tsx  PodcastCard.tsx  PodcastFeaturedCard.tsx  PodcastSkeleton.tsx  SearchBox.tsx  SearchPodcastCard.tsx  Select.tsx  Shimmer.tsx  SlidingTitle.tsx  Spinner.tsx  TextArea.tsx  Topic.tsx
frontend/src/@types/: Conversation.ts  Podcast.ts  PodcastGenTask.ts  User.ts
frontend/src/api/: api.ts  autoFillPodcast.ts  dislikePodcast.ts  generatePodcast.ts  getAllPodcast.ts  getAudio.ts  getAvatarImage.ts  getConversation.ts  getFeaturedPodcasts.ts  getImage.ts  getLikedPodcasts.ts  getListenHistory.ts  getPodcast.ts  getPodcastQuestions.ts  getQueue.ts  getRecommendations.ts  getTrendingPodcasts.ts  getUserProfile.ts  likePodcast.ts  recognizeAudio.ts  searchPodcasts.ts  sendLiveQuestion.ts  updatePodcastVisibility.ts  useRecorder.ts  userLogin.ts  userRegister.ts
frontend/src/contexts/: analytics.context.tsx  mediaPlayer.context.tsx  podcast.context.tsx
frontend/src/hooks/: useAudioPlayer.ts  (+2 more)
(+31 files in other folders)
